# azure-id-token-cli

./: .gitignore  Cargo.toml  README.MD
src/: main.rs
