[package]
name = "liftup-auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
clipboard = "0.5.0"
colored = "2.1.0"
env_logger = "0.11.3"
json = "0.12.4"
log = "0.4.21"
open = "5.1.2"
reqwest = "0.11.25"
tokio ={version = "1.36.0", features = ["macros", "rt-multi-thread"]}
url = "2.5.0"
